Fixed import case sensitivity issue

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 MONGO_URI="mongodb+srv://Argha:GreenApple%4012@cluster0.576mv.mongodb.net/SyncDB"
 PORT=5001
-JWT_SECRET=JellyFish@12
-NODE_ENV=development
+JWT_SECRET=gwVcmxc0Vzu73rkZEmf24wVwngsPTQfBJZ2/6LeCvaw=
 CLOUDINARY_CLOUD_NAME=dgeymscmx
 CLOUDINARY_API_KEY=323998591812724
 CLOUDINARY_API_SECRET=RR_KmuVtwY2swnAHMLZahC_b4sw
+NODE_ENV=development
